@@ -1,6 +1,7 @@
 language: perl
 sudo: false
 perl:
+  - "5.24"
   - "5.22"
   - "5.20"
   - "5.18"
