@@ -2,6 +2,8 @@ Revision history for Pandoc-Elements
 
 {{$NEXT}}
     - Extend class selector to test existence of given class
+    - Extend attributes with Hash::MultiValue.
+    - Drop support of special key 'classes' in attributes helper function
 
 0.18  2016-04-06 13:23:35 CEST
     - Fix and extend attributes function (#29/#26/#14)
